Now using Kotest and mockk